...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nick Name"
            android:textSize="10sp" />

        <EditText
            android:id="@+id/etProfileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Nick Name"
            android:inputType="textPersonName" />

...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#F11010"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btnProfileSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#B7C8B7"
            android:text="Update Profile" />

    </LinearLayout>
...
